--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,7 @@
 *,
 html {
   padding: 0;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  margin-right: 0px;
-  margin-left: 0px;
+  margin: 0px;
 }
 html {
   background-color: black;
@@ -22,22 +19,6 @@ Router {
   margin: 0;
   font-family: "Encode Sans Expanded", sans-serif;
   background-color: black;
-}
-.zoom {
-  position: absolute;
-  width: 100%;
-  height: 100vh;
-  z-index: -10;
-  top: 0;
-  left: 0;
-  margin: 0;
-  padding: 0;
-  background-image: url("flower.jpg");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  background-color: #000000;
 }
 .next {
   background-color: #000000;
