--- a/src/Components/Social/social.scss
+++ b/src/Components/Social/social.scss
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text&family=Goldman:wght@400;700&family=Varela+Round&display=swap');
 
 a {
-  color:rgba(255, 255, 255, 0.4);
-  font-size: 1.1vw;
+  color:white;
   text-decoration: none;
   z-index: 1200;
 }
