--- a/src/Components/Background/backgroundtext.scss
+++ b/src/Components/Background/backgroundtext.scss
@@ -7,11 +7,10 @@ $bg-img : "./bijay.png";
   top: auto;
 }
 .glitch {
-  color: rgb(223, 191, 191);
+  color: rgba(255, 81, 0, 0.92);
   position: relative;
-  font-size: 9vw;
-  // margin: 70px 200px;
-  animation: glitch 5s 5s infinite;
+  font-family: 'Goldman', cursive;
+  font-size:8vw;
 
   @media screen and (max-width: 960px) {
     font-size: 14vw;
@@ -22,7 +21,7 @@ $bg-img : "./bijay.png";
   content: attr(data-text);
   position: absolute;
   left: -2px;
-  text-shadow: -5px 0 magenta;
+  text-shadow: -5px 0 #383538;
   overflow: hidden;
   top: 0;
   animation: noise-1 3s linear infinite alternate-reverse,
@@ -33,7 +32,7 @@ $bg-img : "./bijay.png";
   content: attr(data-text);
   position: absolute;
   left: 2px;
-  text-shadow: -5px 0 lightgreen;
+  text-shadow: -5px 0 rgba(82, 80, 80, 0.62);
   overflow: hidden;
   top: 0;
   animation: noise-2 3s linear infinite alternate-reverse, glitch 5s 5s infinite;
@@ -104,22 +103,21 @@ $bg-img : "./bijay.png";
 
 .glow {
   @extend .glitch;
-  text-shadow: 0 0 1000px rgb(223, 191, 191);
+  text-shadow: 0 0 1000px rgb(50, 48, 48);
   color: transparent;
   position: absolute;
   top: 0;
 }
 
 .subtitle {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Goldman', cursive;
   font-weight: 100;
   font-size: 0.8vw;
-  color: rgba(165, 141, 141, 0.4);
+  color: rgba(234, 194, 194, 0.4);
   text-transform: uppercase;
   letter-spacing: 1em;
   text-align: center;
   position: absolute;
-  left: 17%;
   animation: glitch-2 5s 5.02s infinite;
   @media screen and (max-width: 960px) {
     font-size: 1.3vw;
