--- a/src/Components/Background/backgroundtext.scss
+++ b/src/Components/Background/backgroundtext.scss
@@ -7,7 +7,8 @@ $bg-img : "./bijay.png";
   top: auto;
 }
 .glitch {
-  color: rgba(255, 81, 0, 0.92);
+  //color: rgba(255, 81, 0, 0.92);
+  color: #ff3d24;
   position: relative;
   font-family: 'Goldman', cursive;
   font-size:8vw;
